<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/auth_background_color"
    tools:context=".presentation.authentication.SingInFragment">

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/usernameTextInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/usernameIcon"
        style="@style/GlobalAuthIcons"
        android:src="@drawable/username_icon"

        app:layout_constraintBottom_toBottomOf="@+id/usernameTextInput"
        app:layout_constraintRight_toLeftOf="@id/usernameTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInput"
        style="@style/GlobalAuthTextInputLayoutStyle"

        android:hint="@string/field_username"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/usernameIcon"
        app:layout_constraintTop_toBottomOf="@id/textViewSignUp"
        app:layout_constraintBottom_toTopOf="@id/emailTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            style="@style/GlobalAuthTextInputEditTextStyle"

            android:hint="@string/field_username"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emailIcon"
        style="@style/GlobalAuthIcons"
        android:src="@drawable/email_icon"

        app:layout_constraintBottom_toBottomOf="@+id/emailTextInput"
        app:layout_constraintRight_toLeftOf="@id/emailTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        style="@style/GlobalAuthTextInputLayoutStyle"

        android:hint="@string/field_password"
        android:layout_marginTop="@dimen/medium_space"

        app:layout_constraintBottom_toTopOf="@id/passwordTextInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/emailIcon"
        app:layout_constraintTop_toBottomOf="@id/usernameTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/GlobalAuthTextInputEditTextStyle"

            android:hint="@string/field_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/passwordIcon"
        style="@style/GlobalAuthIcons"
        android:src="@drawable/password_icon"

        app:layout_constraintBottom_toBottomOf="@+id/passwordTextInput"
        app:layout_constraintRight_toLeftOf="@id/passwordTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        style="@style/GlobalAuthTextInputLayoutStyle"

        android:hint="@string/field_email"
        android:layout_marginTop="@dimen/medium_space"


        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/passwordIcon"
        app:layout_constraintTop_toBottomOf="@id/emailTextInput"
        app:layout_constraintBottom_toTopOf="@id/repeatPasswordTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/GlobalAuthTextInputEditTextStyle"

            android:hint="@string/field_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/repeatPasswordIcon"
        style="@style/GlobalAuthIcons"
        android:src="@drawable/password_icon"

        app:layout_constraintBottom_toBottomOf="@+id/repeatPasswordTextInput"
        app:layout_constraintRight_toLeftOf="@id/repeatPasswordTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repeatPasswordTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordTextInput"
        style="@style/GlobalAuthTextInputLayoutStyle"

        android:hint="@string/field_repeat_password"
        android:layout_marginTop="@dimen/medium_space"


        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/repeatPasswordIcon"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInput"
        app:layout_constraintBottom_toTopOf="@id/signUpButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordEditText"
            style="@style/GlobalAuthTextInputEditTextStyle"

            android:hint="@string/field_repeat_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/medium_space"

        android:background="@drawable/bg_button"
        android:text="@string/sign_up"
        android:textSize="@dimen/field_text_size"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordTextInput" />

    <LinearLayout
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_space"
        android:layout_marginBottom="@dimen/margin_small_medium"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/action_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"
            android:textSize="@dimen/small_text_size"
            android:text="@string/sign_in"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"

        android:indeterminateTint="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>